--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -230,6 +230,13 @@ p {
       margin-bottom: 15px;
     }
   }
+  .project-tagline{
+    image {
+      width: 100%;
+      height: auto;
+      margin-bottom: 10px;
+    }
+  }
 
   .publication-title {
     font-size: 16px;
