--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -231,7 +231,7 @@ p {
     }
   }
   .project-tagline{
-    image {
+    img {
       width: 100%;
       height: auto;
       margin-bottom: 10px;
